subtopic index complete

--- a/app/views/subtopics/index.html.erb
+++ b/app/views/subtopics/index.html.erb
@@ -9,118 +9,154 @@
   </div>
   <div class="image-mosaic">
     <div class="card-mosaic card-mosaic-tall card-mosaic-wide">
-      <div class="card-mosaic-side front" style="background-image: url('https://picsum.photos/id/564/1200/800')">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/564/1200/800')">
           <div><%= @topics[0].title %></div>
       </div>
-      <div class="card-mosaic-side back" style="background-image: url('https://picsum.photos/id/564/1200/800')">
+      <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/564/1200/800')">
         <div class="card-mosaic-text">
-          <% @topics[0].subtopics.each do |subtopic| %>
-              <span id="span-id"><%= link_to "#{subtopic.title}", subtopic_tiles_path(subtopic), class:"sibling-fade" %></span>
-          <% end %>
+          <div class="container-sticky" id="tall">
+            <dl class="sticky-stack">
+            <% @topics[0].subtopics.each do |subtopic| %>
+                <dd id="span-id"><%= link_to "#{subtopic.title}", subtopic_tiles_path(subtopic), class:"sibling-fade" %></dd>
+            <% end %>
+            </dl>
+          </div>
         </div>
       </div>
     </div>
 
     <div class="card-mosaic card-mosaic-tall card-mosaic-flip">
-      <div class="card-mosaic-side front" style="background-image: url('https://picsum.photos/id/566/800/530')">
-        <div><%= @topics[1].title %></div>
-      </div>
-      <div class="card-mosaic-side back" style="background-image: url('https://picsum.photos/id/566/800/530')">
-        <div class="card-mosaic-text">
-          <% @topics[1].subtopics.each do |subtopic| %>
-              <span id="span-id"><%= link_to "#{subtopic.title}", subtopic_tiles_path(subtopic), class:"sibling-fade" %></span>
-          <% end %>
-        </div>
-      </div>
-    </div>
-
-    <div class="card-mosaic card-mosaic-flip">
-      <div class="card-mosaic-side front" style="background-image: url('https://picsum.photos/id/575/800/530')">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/566/800/530')">
         <div><%= @topics[2].title %></div>
       </div>
-      <div class="card-mosaic-side back" style="background-image: url('https://picsum.photos/id/575/800/530')">
+      <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/566/800/530')">
         <div class="card-mosaic-text">
-          <% @topics[2].subtopics.each do |subtopic| %>
-              <span id="span-id"><%= link_to "#{subtopic.title}", subtopic_tiles_path(subtopic), class:"sibling-fade" %></span>
-          <% end %>
+          <div class="container-sticky" id="tall">
+            <dl class="sticky-stack">
+              <% @topics[2].subtopics.each do |subtopic| %>
+                <dd id="span-id"><%= link_to "#{subtopic.title}", subtopic_tiles_path(subtopic), class:"sibling-fade" %></dd>
+              <% end %>
+            </dl>
+          </div>
         </div>
       </div>
     </div>
 
     <div class="card-mosaic card-mosaic-flip">
-      <div class="card-mosaic-side front" style="background-image: url('https://picsum.photos/id/626/800/530')">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/575/800/530')">
+        <div><%= @topics[1].title %></div>
+      </div>
+      <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/575/800/530')">
+        <div class="card-mosaic-text">
+          <div class="container-sticky">
+            <dl class="sticky-stack">
+              <% @topics[1].subtopics.each do |subtopic| %>
+                  <dd id="span-id"><%= link_to "#{subtopic.title}", subtopic_tiles_path(subtopic), class:"sibling-fade" %></dd>
+              <% end %>
+            </dl>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-mosaic card-mosaic-flip">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/626/800/530')">
         <div><%= @topics[3].title %></div>
       </div>
-      <div class="card-mosaic-side back" style="background-image: url('https://picsum.photos/id/626/800/530')">
+      <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/626/800/530')">
         <div class="card-mosaic-text">
-          <% @topics[3].subtopics.each do |subtopic| %>
-              <span id="span-id"><%= link_to "#{subtopic.title}", subtopic_tiles_path(subtopic), class:"sibling-fade" %></span>
-          <% end %>
+          <div class="container-sticky">
+            <dl class="sticky-stack">
+              <% @topics[3].subtopics.each do |subtopic| %>
+                  <dd id="span-id"><%= link_to "#{subtopic.title}", subtopic_tiles_path(subtopic), class:"sibling-fade" %></dd>
+              <% end %>
+            </dl>
+          </div>
         </div>
       </div>
     </div>
 
     <div class="card-mosaic card-mosaic-flip">
-      <div class="card-mosaic-side front" style="background-image: url('https://picsum.photos/id/667/800/530')">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/667/800/530')">
         <div><%= @topics[4].title %></div>
       </div>
-      <div class="card-mosaic-side back" style="background-image: url('https://picsum.photos/id/667/800/530')">
+      <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/667/800/530')">
         <div class="card-mosaic-text">
-          <% @topics[4].subtopics.each do |subtopic| %>
-              <span id="span-id"><%= link_to "#{subtopic.title}", subtopic_tiles_path(subtopic), class:"sibling-fade" %></span>
-          <% end %>
+          <div class="container-sticky">
+            <dl class="sticky-stack">
+              <% @topics[4].subtopics.each do |subtopic| %>
+                <dd id="span-id"><%= link_to "#{subtopic.title}", subtopic_tiles_path(subtopic), class:"sibling-fade" %></dd>
+              <% end %>
+            </dl>
+          </div>
         </div>
       </div>
     </div>
 
     <div class="card-mosaic card-mosaic card-mosaic-flip">
-      <div class="card-mosaic-side front" style="background-image: url('https://picsum.photos/id/678/800/530')">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/678/800/530')">
         <div><%= @topics[5].title %></div>
       </div>
-      <div class="card-mosaic-side back" style="background-image: url('https://picsum.photos/id/678/800/530')">
+      <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/678/800/530')">
         <div class="card-mosaic-text">
-          <% @topics[5].subtopics.each do |subtopic| %>
-              <span id="span-id"><%= link_to "#{subtopic.title}", subtopic_tiles_path(subtopic), class:"sibling-fade" %></span>
-          <% end %>
+          <div class="container-sticky">
+            <dl class="sticky-stack">
+              <% @topics[5].subtopics.each do |subtopic| %>
+                  <dd id="span-id"><%= link_to "#{subtopic.title}", subtopic_tiles_path(subtopic), class:"sibling-fade" %></dd>
+              <% end %>
+            </dl>
+          </div>
         </div>
       </div>
     </div>
 
     <div class="card-mosaic card-mosaic-wide card-mosaic-flip">
-      <div class="card-mosaic-side front" style="background-image: url('https://picsum.photos/id/695/800/530')">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/695/800/530')">
         <div><%= @topics[6].title %></div>
       </div>
-      <div class="card-mosaic-side back" style="background-image: url('https://picsum.photos/id/695/800/530')">
+      <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/695/800/530')">
         <div class="card-mosaic-text">
-          <% @topics[6].subtopics.each do |subtopic| %>
-              <span id="span-id"><%= link_to "#{subtopic.title}", subtopic_tiles_path(subtopic), class:"sibling-fade" %></span>
-          <% end %>
+          <div class="container-sticky">
+            <dl class="sticky-stack">
+              <% @topics[6].subtopics.each do |subtopic| %>
+                  <dd id="span-id"><%= link_to "#{subtopic.title}", subtopic_tiles_path(subtopic), class:"sibling-fade" %></dd>
+              <% end %>
+            </dl>
+          </div>
         </div>
       </div>
     </div>
 
     <div class="card-mosaic card-mosaic card-mosaic-flip">
-      <div class="card-mosaic-side front" style="background-image: url('https://picsum.photos/id/683/800/530')">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/683/800/530')">
         <div><%= @topics[7].title %></div>
       </div>
-      <div class="card-mosaic-side back" style="background-image: url('https://picsum.photos/id/683/800/530')">
+      <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/683/800/530')">
         <div class="card-mosaic-text">
-          <% @topics[7].subtopics.each do |subtopic| %>
-              <span id="span-id"><%= link_to "#{subtopic.title}", subtopic_tiles_path(subtopic), class:"sibling-fade" %></span>
-          <% end %>
+          <div class="container-sticky">
+            <dl class="sticky-stack">
+              <% @topics[7].subtopics.each do |subtopic| %>
+                  <dd id="span-id"><%= link_to "#{subtopic.title}", subtopic_tiles_path(subtopic), class:"sibling-fade" %></dd>
+              <% end %>
+             </dl>
+          </div>
         </div>
       </div>
     </div>
 
     <div class="card-mosaic card-mosaic-wide card-mosaic-flip">
-      <div class="card-mosaic-side front" style="background-image: url('https://picsum.photos/id/693/800/530')">
+      <div class="card-mosaic-side front" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/693/800/530')">
         <div><%= @topics[8].title %></div>
       </div>
-      <div class="card-mosaic-side back" style="background-image: url('https://picsum.photos/id/693/800/530')">
+      <div class="card-mosaic-side back" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://picsum.photos/id/693/800/530')">
         <div class="card-mosaic-text">
-          <% @topics[8].subtopics.each do |subtopic| %>
-              <span id="span-id"><%= link_to "#{subtopic.title}", subtopic_tiles_path(subtopic), class:"sibling-fade" %></span>
-          <% end %>
+          <div class="container-sticky">
+            <dl class="sticky-stack">
+              <% @topics[8].subtopics.each do |subtopic| %>
+                  <dd id="span-id"><%= link_to "#{subtopic.title}", subtopic_tiles_path(subtopic), class:"sibling-fade" %></dd>
+              <% end %>
+             </dl>
+          </div>
         </div>
       </div>
     </div>
