--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .main-container{
-  min-height:100vh;
+  min-height:80vh;
  }
 
 .footer {
@@ -22,12 +22,12 @@
 .footer-links a {
   color: white;
   text-decoration: none;
-  font-size: 1.5em;
-  padding: 0 19.75rem 0 3.125rem;
+  font-size: 1em;
+  padding: 0 30rem 0 3.125rem;
 }
 .footer-links a:hover {
   opacity: 1;
-  color: rgb(0,112,112);
+  color: rgb(116, 151, 106);
 }
 .footer .fa-bolt {
   color: rgb(0,112,112);
