--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,7 @@
 <div class="footer">
   <div class="footer-links">
-    <%=link_to 'Change topics', topics_path %>
-    <%=link_to 'About inCharge', about_path %>
-
-  </div>
-  <div class="footer-copyright">
-    Be <i class="fas fa-bolt"></i> inCharge
-  </div>
+    <%=link_to 'change topics', topics_path %>
+    <%=link_to 'about inCharge', about_path %>
+    <%=link_to 'sign out', destroy_user_session_path %>
+ </div>
 </div>
