--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,12 +4,19 @@ body {
 }
 
 #title {
-  font-size: 200px;
+  font-size: 120px;
   color: white;
+  animation: flip 2s infinite;
+  animation-delay: calc(.2s * var(--i))
+}
+@keyframes flip {
+  0%,80% {
+    transform: rotateY(360deg)
+  }
 }
 
 #sub-title {
-  font-size: 80px;
+  font-size: 50px;
   color: white;
   a {
     color: #363D2F;
@@ -34,6 +41,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: auto;
+  justify-items: center;
 }
 
 .text-dark {
