--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -5,13 +5,22 @@
 <div class="line1"></div>
 <div class="line2"></div>
 
+<div class="weather-box">
+ <div class="weather">
+   <p id="celcius">26°C</p>
+     <p>LONDON</p>
+  </div>
+     <div class="icons8-sun"></div>
+</div>
+
   <% @subscriptions.each_with_index do |subscription, index| %>
 
   <div class="card-img topicsCard topicsCard-<%=index%>" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(<%= cl_image_path subscription.tile.photos[0].key%>);">
-
+   <p class="topic-indicator">FINANCE</p>
     <h2><%= subscription.tile.title %></h2>
     <h3><%#= subscription.tile.summary %></h3>
       <%#= cl_image_tag subscription.tile.photos[1].key %>
+
         <small class="Unsubscribe"><%= link_to "Unsubscribe", subscription_path(subscription), method: :delete, data: { confirm: "Click OK to unsubscribe and pick a new topic for your feed!" }, class: "btn btn-ghost" %></small>
         <small class="read-more"><%= link_to "Read More", subscription_path(subscription), method: :get, class: "btn btn-ghost" %></small>
     </div>
