--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -6,13 +6,29 @@
 <div class="line2"></div>
 
 <div class="weather-box">
- <div class="weather">
-   <p id="celcius">26°C</p>
-     <p>LONDON</p>
-  </div>
-     <div class="icons8-sun"></div>
-</div>
+ <div class="container" data-controller="weather" data-weather-openweather-api-key-value="<%= ENV["OPENWEATHER_API_KEY"] %>">
+ <div class="row">
+   <form class="d-flex my-5" data-action="submit->weather#fetchWeather">
+                <input type="text" placeholder="Enter city" class="form-control flex-grow-1" data-weather-target="input">
+                <a href="" class="position" data-action="click->weather#fetchWeatherByCoordinates"><i class="bi bi-geo-alt"></i></a>
+                <input type="submit" value="Search" class="btn btn-primary ms-3">
+              </form>
+    </div>
+     <div class="row">
+      <h3 class="text-secondary" data-weather-target="date"></h3>
+      <p data-weather-target="description"></p>
+      </div>
 
+       <div class="row">
+
+      <div class="d-flex">
+        <img class="d-none" src="" alt="Weather Icon" data-weather-target="icon">
+         <h2 data-weather-target="temperature"><!-- TODO: TEMPERATURE --></h2>
+      </div>
+    </div>
+
+</div>
+</div>
   <% @subscriptions.each_with_index do |subscription, index| %>
 
   <div class="card-img topicsCard topicsCard-<%=index%>" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(<%= cl_image_path subscription.tile.photos[0].key%>);">
