--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,15 +4,11 @@
     <h2 id="sub-title">make the internet yours</h2>
     <br>
     <h1 id="title">be inCharge</h1>
-
-
-
-
+    <br>
+    <h2 id="sub-title">sign up<%= link_to " here ", topics_path, class:"welcome-btn"%>today!</h2>
 
 <%
-=begin %>    <p id="sub-title">choose your topics  <%#= link_to "here", topics_path, class:"welcome-btn"%>!</p>
-
-
+=begin %>
 
   <svg id="animate" width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 134px; height: 134px; transform: rotateY(0deg);"><style>
         .line-grid1-a {animation:line-grid1-draw 2s infinite; stroke-dasharray: 180;}
