--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -15,21 +15,24 @@
   cursor: pointer;
   padding:10px 20px;
   margin:0px 2px;
-  background:#000;
+  background: transparent;
   display:inline-block;
   color:#fff;
   border-radius:3px 3px 0px 0px;
   box-shadow: 0 0.5rem 0.8rem #00000080;
 }
 .panels{
-  background:#fffffff6;
+  background: transparent;
   box-shadow: 0 0.5rem 1rem #5e5e5e80;
   min-height:600px;
   width:100%;
   max-width:1300px;
-  border-radius:2px;
+  border-radius:0px;
+  border-width: 1px;
+  border-color: #fff;
   overflow:hidden;
   padding:20px;
+  color: white;
 }
 .panel{
   display:none;
