--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,11 +1,11 @@
 .parent {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(8, 1fr);
+  grid-template-rows: repeat(6, 1fr);
   grid-column-gap: 15px;
   grid-row-gap: 10px;
-  height: 100vh;
-  width: 95%;
+  height: auto;
+  width: 91%;
   margin: auto;
   }
 
@@ -19,8 +19,8 @@
   flex-direction: row-reverse;
   flex-wrap: wrap;
   align-content: flex-end;
+  overflow: hidden;
 }
-
 
 .card-img {
   background-size: cover;
@@ -79,9 +79,9 @@
   grid-column-start: 2;
   grid-column-end: 3;
   grid-row: 2;
-  height: 15em;
-  margin-top: 1em;
-  width: 14em;
+  height: 50%;
+  margin-top: -1em;
+  width: 0em;
 }
 
 .topicsCard-0 {
@@ -98,65 +98,121 @@
   grid-column-start: 4;
   grid-column-end: 6;
   grid-row: 1;
-  height: 20em;
-  width: 34em;
+  height: 18em;
+  width: 35em;
   margin-top: 7em;
   padding-bottom: 2em;
   padding-right: 39%;
-  margin-left: 18%;
+  margin-left: 59px;
 }
 
 .topicsCard-2 {
   grid-column-start: 1;
-  grid-column-end: 3;
+  grid-column-end: 2;
   grid-row: 2;
-  height: 19em;
-  width: 37em;
-  margin-top: 1em;
+  width: 100%;
+  height: 50%;
+  margin-top: -4%;
   padding-bottom: 2em;
 }
+
 .topicsCard-3 {
-  grid-column-start: 3;
-  grid-column-end: 4;
-  grid-row: 3;
-  width: 50%;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 3;
+  grid-row-end: 3;
+  width: 100%;
   height: 50%;
+  margin-top: -49%;
 }
 
-  .topicsCard-3 .p {
+.topicsCard-3 .p {
   font-family: 'Archivo Narrow', sans-serif;
 }
 
 .topicsCard-4 {
-  grid-column: 2;
-  grid-row: 4;
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row: 3;
+  margin-top: -43%;
+  margin-left: 110px;
+  height: 30em;
+  width: 129%;
 }
+
+#box1 {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row: 3;
+  margin-top: -48%;
+  margin-left: 110px;
+  height: 26em;
+  width: 133%;
+  border-style: solid;
+  border-color: white;
+  border-width: 1px;
+}
+
+#box2 {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row: 3;
+  margin-top: -46%;
+  margin-left: 100px;
+  height: 26em;
+  width: 133%;
+  border-style: solid;
+  border-color: white;
+  border-width: 1px;
+  background-color: #363D2F;
+}
+
 .topicsCard-5 {
   grid-column-start: 4;
   grid-column-end: 6;
   grid-row: 2;
-  height: 20em;
-  width: 34em;
-  margin-top:  -3em;
-  padding-bottom: 2em;
+  height: 70%;
+  width: 89%;
+  margin-top: -8em;
+  padding-bottom: 7em;
   padding-right: 39%;
-  margin-left: 18%;
+  margin-left: 59px;
 }
 
 .topicsCard-6 {
-  grid-column-start: 4;
-  grid-column-end: 6;
+  grid-column-start: 1;
+  grid-column-end: 2;
   grid-row: 4;
+  height: 18em;
+  width: 35em;
+  margin-top: -47%;
 }
 
 .topicsCard-7 {
-  grid-column-start: 3;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 5;
+  grid-row-end: 5;
+  height: 100%;
+  width: 100%;
+  padding-bottom: 2em;
+}
+
+.topicsCard-8 {
+  grid-column-start: 2;
   grid-column-end: 4;
   grid-row: 5;
-  height: 19em;
-  width: 18em;
-  margin-top: 1em;
-  margin-left: -2em;
+  height: 100%;
+  width: 100%;
+  padding-bottom: 2em;
+}
+
+.topicsCard-9 {
+  grid-column-start: 4;
+  grid-column-end: 6;
+  grid-row: 5;
+  height: 100%;
+  width: 100%;
   padding-bottom: 2em;
 }
 
