--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -19,15 +19,15 @@ body {
   font-size: 50px;
   color: white;
   a {
-    color: #363D2F;
+    color: white;
     text-decoration: none;
-    font-size: 80px;
+    font-size: 50px;
   }
   a:hover {
     color: white;
     background-color: #363D2F;
     text-decoration: none;
-    font-size: 80px;
+    font-size: 50px;
   }
 }
 
@@ -37,12 +37,18 @@ body {
 .h1 .h2 .h2 {
   color: white;
 }
+
+.homecontainer {
+  bottom: 0;
+}
+
 .front-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   height: auto;
   justify-items: center;
+  margin-top: 10%;
 }
 
 .text-dark {
@@ -55,7 +61,7 @@ body {
 }
 
 .a:hover {
-  color: chocolate;
+  color: rgb(112, 119, 110);
 }
 
 .welcome-btn {
@@ -73,11 +79,11 @@ body {
 
 
 .welcome-btn {
-  background-color: white;;
+  background-color: transparent;
   border: none;
   color: #363D2F;
   outline: none;
-  padding: 12px 40px 10px;
+  padding: 1px 1px 1px;
   position: relative;
   text-decoration: none;
 }
@@ -92,14 +98,14 @@ body {
   width: 24px;
 }
 
-.welcome-btn:before {
-  border-top: 2px solid white;
-  right: 0;
-  top: -4px;
-}
+// .welcome-btn:before {
+//  border-top: 1px solid white;
+//  right: 0;
+//  top: -4px;
+// }
 
 .welcome-btn:after {
-  border-bottom: 2px solid white;
+  border-bottom: 1px solid white;
   bottom: -4px;
   left: 0;
 }
