--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -53,3 +53,9 @@
   color: white;
   text-decoration: underline;
 }
+
+
+.form-control.is-valid:focus {
+  border-color: white;
+  box-shadow: 0 0 0 0.25rem rgba(211, 221, 217, 0.25);
+}
