--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -7,7 +7,9 @@
       <label class="tab" id="one-tab" for="one">My Profile</label>
       <label class="tab" id="two-tab" for="two">Suggest new content</label>
     </div>
+
     <div class="panels">
+
       <div class="panel" id="one-panel">
         <div class="row">
           <div class="col-6">
@@ -18,6 +20,7 @@
             </div>
           </div>
         </div>
+
         <div class="profile-info">
           <div class="row">
             <%= image_tag "https://avatars.githubusercontent.com/u/95916189?v=4", id:"avatar-profile"%>
@@ -29,6 +32,13 @@
             <h1><%= @user.email %></h1>
           </div>
         </div>
+
+    <div class="profile-extrainfo">
+      <h3 id="p1">More info:</h3>
+      <h3 id="p2">Country:</h3>
+      <h3 id="p3">Your topics:</h3>
+    </div>
+
       <div class="panel" id="two-panel">
         <div class="panel-title">Make a suggestion</div>
       </div>
