--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -13,6 +13,9 @@
      <div class="icons8-sun"></div>
 </div>
 
+<div id="box1"></div>
+<div id="box2"></div>
+
   <% @subscriptions.each_with_index do |subscription, index| %>
 
   <div class="card-img topicsCard topicsCard-<%=index%>" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(<%= cl_image_path subscription.tile.photos[0].key%>);">
