--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -3,7 +3,7 @@
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: auto repeat(12, 1fr);
   grid-column-gap: 15px;
-  grid-row-gap: 10px;
+  grid-row-gap: 15px;
   height: auto;
   width: 91%;
   margin: auto;
@@ -89,6 +89,11 @@
   grid-row: span 3;
   margin-bottom: 2em;
   padding-right: 39%;
+  padding-bottom: 30%;
+}
+
+.topicsCard-0 .h1 {
+  font-size: x-large;
 }
 
 .topicsCard-1 {
@@ -104,21 +109,15 @@
 
 .topicsCard-2 {
   grid-column: span 1;
-  // width: 100%;
-  // height: 50%;
-  // margin-top: -4%;
-  // padding-bottom: 2em;
+  padding-bottom: 70%;
 }
 
 .topicsCard-3 {
   grid-column: span 1;
+  padding-bottom: 70%;
   // width: 100%;
   // height: 50%;
   // margin-top: -49%;
-}
-
-.topicsCard-3 .p {
-  font-family: 'Archivo Narrow', sans-serif;
 }
 
 .topicsCard-4 {
