--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -1,7 +1,7 @@
 <div class="parent">
 
 
-<%# <div class="line2"></div> %>
+<div class="line2"></div>
 
 <div class="weather-box">
  <div class="container weather-container" data-controller="weather" data-weather-openweather-api-key-value="<%= ENV["OPENWEATHER_API_KEY"] %>">
@@ -17,11 +17,6 @@
       <p data-weather-target="description"></p>
       </div>
 
-
-<%# <div id="box1"></div> %>
-<%# <div id="box2"></div> %>
-
-
        <div class="row">
 
       <div class="d-flex">
@@ -36,7 +31,7 @@
   <% @subscriptions.each_with_index do |subscription, index| %>
 
   <div class="card-img topicsCard topicsCard-<%=index%>" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(<%= cl_image_path subscription.tile.photos[0].key%>);">
-   <p class="topic-indicator">FINANCE</p>
+   <p class="topic-indicator"><%= subscription.tile.subtopic.title %></p>
     <h2><%= subscription.tile.title %></h2>
     <h3><%#= subscription.tile.summary %></h3>
       <%#= cl_image_tag subscription.tile.photos[1].key %>
@@ -52,5 +47,8 @@
 </div>
 <% end %>
      <% end %>
+
+<div id="box1"></div>
+<div id="box2"></div>
 
 </div>
