--- a/app/views/apis/show.html.erb
+++ b/app/views/apis/show.html.erb
@@ -1,1 +1,7 @@
-<h1><%= @response %></h1>
+<h1><%= @response["source"]["name"] %></h1>
+<h2><%= @response["author"] %></h2>
+<h3><%= @response["title"] %></h3>
+<h4><%= @response["summary"] %></h4>
+<p><%= @response["content"] %></p>
+<%= image_tag @response["urlToImage"] %>
+<p><%= @response["url"] %></p>
