--- a/app/views/tiles/show.html.erb
+++ b/app/views/tiles/show.html.erb
@@ -10,8 +10,12 @@
       <h1 class="subheader"><%= @tile.subtopic.topic.title  %>: <%= @tile.subtopic.title  %></h1>
         <%=link_to 'Back to all tiles', subtopic_tiles_path(@tile.subtopic_id), class:"animated-border-button"%>
 </div>
+      <% if @tile.picture_url.nil? %>
         <%= cl_image_tag @tile.photos[0].key, class:"show-card-image" %>
         <%# <div class="articlebox1"></div> %>
+      <% else %>
+        <%= image_tag @tile.picture_url, class:"show-card-image" %>
+      <% end %>
 
   <div class="text-div">
           <h1 id="art-title"> <%= @tile.title %> </h1>
