--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -21,6 +21,7 @@
   flex-wrap: wrap;
   align-content: flex-end;
   overflow: hidden;
+  text-decoration: none;
 }
 
 .card-img {
@@ -57,7 +58,9 @@
 
 .five-min {
   color: white;
-  grid-column: span 2;
+  grid-row: 1;
+  grid-column-start: 4;
+  grid-column-end: 5;
   margin-top: 2em;
 }
 
@@ -83,7 +86,7 @@
   top: 45em;
 }
 
-.topicsCard-0 {
+.topicsCard:nth-child(1) {
   grid-column: span 3;
   grid-row: span 3;
   margin-bottom: 2em;
@@ -91,11 +94,11 @@
   padding-bottom: 19%;
 }
 
-.topicsCard-0 h2 {
+.topicsCard:nth-child(1) h2 {
   font-size: 3em;
 }
 
-.topicsCard-1 {
+.topicsCard:nth-child(2) {
   grid-column: span 2;
   grid-row: span 1;
   padding-right: 45%;
@@ -110,14 +113,14 @@
   // margin-left: 59px;
 }
 
-.topicsCard-2 {
+.topicsCard:nth-child(3) {
   grid-column: span 1;
   padding-bottom: 70%;
   display: flex;
   align-content: space-around;
 }
 
-.topicsCard-3 {
+.topicsCard:nth-child(4) {
   grid-column: span 1;
   padding-bottom: 70%;
   display: flex;
@@ -127,7 +130,7 @@
   // margin-top: -49%;
 }
 
-.topicsCard-4 {
+.topicsCard:nth-child(5) {
   grid-column: span 2;
   grid-row: span 1;
   // margin-top: -43%;
@@ -162,7 +165,7 @@
   background-color: #363D2F;
 }
 
-.topicsCard-5 {
+.topicsCard:nth-child(6) {
   grid-column: span 2;
   grid-row: span 1;
   // height: 70%;
@@ -173,7 +176,7 @@
   // margin-left: 59px;
 }
 
-.topicsCard-6 {
+.topicsCard:nth-child(7) {
   grid-column: span 3;
   padding-bottom: 19%;
   padding-right: 19%;
@@ -185,11 +188,11 @@
   // margin-top: -47%;
 }
 
-.topicsCard-6 h2 {
+.topicsCard:nth-child(7) h2 {
   font-size: 3em;
 }
 
-.topicsCard-7 {
+.topicsCard:nth-child(8) {
   grid-column: span 1;
   grid-row: span 1;
   // height: 100%;
@@ -197,7 +200,7 @@
   // padding-bottom: 2em;
 }
 
-.topicsCard-8 {
+.topicsCard:nth-child(9) {
   grid-column: span 1;
   grid-row: span 1;
   // height: 100%;
@@ -205,7 +208,7 @@
   // padding-bottom: 2em;
 }
 
-.topicsCard-9 {
+.topicsCard:nth-child(10){
   grid-column: span 2;
   // height: 100%;
   // width: 100%;
