--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,6 +3,15 @@ body {
 	background-color: #363D2F;
 }
 
+a {
+  color: white;
+  text-decoration: none;
+}
+
+a:hover {
+  color: rgb(224, 231, 225);
+}
+
 #title {
   font-size: 120px;
   color: white;
