--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -1,9 +1,29 @@
-<div class="parent">
+<div class="parent" data-controller="sortable-tiles" data-sortable-tiles-target="tilepage">
 
 
-<div class="line2"></div>
+  <% @subscriptions.each_with_index do |subscription, index| %>
 
-<div class="weather-box">
+  <div class="card-img topicsCard topicsCard-<%=index%>" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(<%= cl_image_path subscription.tile.photos[0].key%>);">
+   <p class="topic-indicator"><%= subscription.tile.subtopic.title %></p>
+    <h2><%= link_to subscription.tile.title, subscription_path(subscription) %></h2>
+    <h3><%#= subscription.tile.summary %></h3>
+      <%#= cl_image_tag subscription.tile.photos[1].key %>
+
+        <small class="Unsubscribe"><%= link_to "Unsubscribe", subscription_path(subscription), method: :delete, data: { confirm: "Click OK to unsubscribe and pick a new topic for your feed!" }, class: "btn btn-ghost" %></small>
+        <%# <small class="read-more"><%= link_to "Read More", subscription_path(subscription), method: :get, class: "btn btn-ghost" %></small>
+    </div>
+
+     <% end %>
+
+
+        <div class="five-min filtered">
+  <h3 class="five-min-header">5 MIN READ</h3>
+  <div class="line1"></div>
+</div>
+
+     <div class="line2 filtered" ></div>
+
+<div class="weather-box filtered">
  <div class="container weather-container" data-controller="weather" data-weather-openweather-api-key-value="<%= ENV["OPENWEATHER_API_KEY"] %>">
  <div class="row">
    <form class="d-flex my-5" data-action="submit->weather#fetchWeather">
@@ -27,26 +47,6 @@
 
 </div>
 </div>
-
-  <% @subscriptions.each_with_index do |subscription, index| %>
-
-  <div class="card-img topicsCard topicsCard-<%=index%>" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(<%= cl_image_path subscription.tile.photos[0].key%>);">
-   <p class="topic-indicator"><%= subscription.tile.subtopic.title %></p>
-    <h2><%= subscription.tile.title %></h2>
-    <h3><%#= subscription.tile.summary %></h3>
-      <%#= cl_image_tag subscription.tile.photos[1].key %>
-
-        <small class="Unsubscribe"><%= link_to "Unsubscribe", subscription_path(subscription), method: :delete, data: { confirm: "Click OK to unsubscribe and pick a new topic for your feed!" }, class: "btn btn-ghost" %></small>
-        <small class="read-more"><%= link_to "Read More", subscription_path(subscription), method: :get, class: "btn btn-ghost" %></small>
-    </div>
-
-<% if index == 0%>
-    <div class="five-min">
-  <h3 class="five-min-header">5 MIN READ</h3>
-  <div class="line1"></div>
-</div>
-<% end %>
-     <% end %>
 
 <div id="box1"></div>
 <div id="box2"></div>
