--- a/app/views/tiles/index.html.erb
+++ b/app/views/tiles/index.html.erb
@@ -23,7 +23,11 @@
   <div class="row">
     <% @tiles.each do |tile| %>
       <div class="col-4">
-        <div class="big-card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= cl_image_path tile.photos[0].key%>);">
+        <% if tile.picture_url.nil? %>
+          <div class="big-card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= cl_image_path tile.photos[0].key%>);">
+        <% else %>
+          <div class="big-card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= image_path tile.picture_url%>);">
+        <% end %>
           <div class="big-card-text">
             <div class="big-card-text2" >
               <h2><%= tile.title %></h2>
