--- a/app/views/tiles/new.html.erb
+++ b/app/views/tiles/new.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
   <%= simple_form_for(@tile) do |f| %>
-    <%= f.input :subtopic %>
-    <%= f.select :language, Tile::LANGUAGE_CATEGORIES, prompt: 'Select language' %>
+    <%= f.association :subtopic %>
     <%= f.submit %>
   <% end %>
 </div>
