--- a/app/views/tiles/show.html.erb
+++ b/app/views/tiles/show.html.erb
@@ -31,7 +31,13 @@
 <div class="suggestions">
   <%# <h2 id="suggest">here are more suggestions</h2> %>
   <% @tiles.each do |tile| %>
-    <div class="card-img articleTopicsCard" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(<%= cl_image_path tile.photos[0].key%>);">
+      <% if tile.picture_url.nil? %>
+        <div class="card-img articleTopicsCard" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(<%= cl_image_path tile.photos[0].key%>);">
+        <%# <div class="articlebox1"></div> %>
+      <% else %>
+       <div class="card-img articleTopicsCard" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(<%= image_path tile.picture_url%>);">
+      <% end %>
+
     <h2><%= link_to tile.title, tile_path(tile) %></h2>
     </div>
   <% end %>
