--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -23,7 +23,7 @@
 
      <div class="line2 filtered" ></div>
 
-<div class="weather-box filtered">
+<div class="weather-box ">
  <div class="container weather-container" data-controller="weather" data-weather-openweather-api-key-value="<%= ENV["OPENWEATHER_API_KEY"] %>">
  <div class="row">
    <form class="d-flex my-5" data-action="submit->weather#fetchWeather">
