--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -36,7 +36,8 @@
     <div class="profile-extrainfo">
       <h3 id="p1">More info:</h3>
       <h3 id="p2">Country:</h3>
-      <h3 id="p3">Your topics:</h3>
+      <h3 id="p3">Tile refresh rate: 2x per day</h3>
+      <h3 id="p3">Number of tiles on dashboard: 10</h3>
     </div>
 
       <div class="panel" id="two-panel">
