--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -18,12 +18,13 @@
   color: white;
   opacity: 0.8;
   font-family: 'tenor Sans', sans-serif;
+  width: 100%;
 }
 .footer-links a {
   color: white;
   text-decoration: none;
   font-size: 1em;
-  padding: 0 30rem 0 3.125rem;
+  padding: 1rem;
 }
 .footer-links a:hover {
   opacity: 1;
